--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 .hero-text h1 {
   font-family: var(--header-font);
   font-size: 4rem;
+  font-weight: 700;
   margin-bottom: 1rem;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, .7);
 }
